test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-delete-policy/manifests.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: default
type: Opaque
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-clone-sync-delete-policy
  namespace: default
spec:
  rules:
  - name: pol-clone-sync-delete-policy-cm
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: Secret
      name: newsecret
      namespace: default
      synchronize: true
      orphanDownstreamOnPolicyDelete: true
      clone:
        name: regcred
        namespace: default
