test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-delete-policy/04-delete-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete-policy
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: kyverno.io/v2beta1
      kind: Policy
      name: pol-clone-sync-delete-policy
      namespace: default
