test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-delete-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-sync-delete-policy
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: manifests.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-sync-delete-policy
        - name: namespace
          value: default
  - name: step-02
    try:
    - apply:
        file: create-cm.yaml
    - assert:
        file: cloned-secret.yaml
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: Policy
          name: pol-clone-sync-delete-policy
          namespace: default
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - assert:
        file: chainsaw-step-06-assert-1-1.yaml
  - name: step-99
    try:
    - command:
        args:
        - delete
        - ur
        - -A
        - --all
        entrypoint: kubectl
